--- a/index.html
+++ b/index.html
@@ -12,154 +12,184 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body class="body">
     <!-- Шапка сторінки -->
-    <header>
-      <!-- навігація на інші сторніки -->
+    <header class="header">
+      <div class="header-container container">
+        <!-- навігація на інші сторніки -->
 
-      <nav class="body-medium link medium-color">
-        <a class="header-logo-link link" href="./index.html"
-          >Web <span class="studio-logo link">Studio</span></a
-        >
-        <ul class="list">
-          <li class="link">
-            <a href="./index.html" class="body-medium link">Studio</a>
-          </li>
-          <li>
-            <a href="./portfolio.html" class="body-medium link">Portfolio</a>
-          </li>
-          <li><a href="" class="body-medium link">Contacts</a></li>
-        </ul>
-      </nav>
-
-      <address class="adress">
-        <ul class="list adress">
-          <li class="link">
-            <a class="text-body color-b link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li class="link">
-            <a class="text-body color-b link" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+        <nav class="body-medium link medium-color header-nav">
+          <a class="header-logo-link link" href="./index.html"
+            >Web <span class="studio-logo link">Studio</span></a
+          >
+          <ul class="header-nav-list list">
+            <li class="link">
+              <a href="./index.html" class="header-nav-list body-medium link"
+                >Studio</a
+              >
+            </li>
+            <li>
+              <a href="./portfolio.html" class="body-medium link">Portfolio</a>
+            </li>
+            <li><a href="" class="body-medium link">Contacts</a></li>
+          </ul>
+        </nav>
+        <address class="adress">
+          <ul class="list adress header-nav-list">
+            <li class="link">
+              <a class="text-body color-b link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="link">
+              <a class="text-body color-b link" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
 
     <main>
       <section class="dark-bg">
-        <h1 class="text-style-big effect">
-          Effective Solutions for Your Business
-        </h1>
-        <button type="button" class="button-text button-f">
-          Order Service
-        </button>
+        <div class="container">
+          <h1 class="text-style-big effect">
+            Effective Solutions for Your Business
+          </h1>
+          <button type="button" class="button-text button-f">
+            Order Service
+          </button>
+        </div>
       </section>
 
       <!-- опис місії студії -->
       <section class="sect-all">
-        <h2 class="text-style-medium" hidden>ab</h2>
-        <ul class="list">
-          <li class="list color-h3">
-            <h3 class="text-style-small">Strategy</h3>
-            <p class="text-body color-b">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li class="list color-h3">
-            <h3 class="text-style-small">Punctuality</h3>
-            <p class="text-body color-b">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li class="list color-h3">
-            <h3 class="text-style-small">Diligence</h3>
-            <p class="text-body color-b">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li class="list color-h3">
-            <h3 class="text-style-small">Technologies</h3>
-            <p class="text-body color-b">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="text-style-medium" hidden>ab</h2>
+          <ul class="list section-2">
+            <li class="list color-h3">
+              <h3 class="text-style-small">Strategy</h3>
+              <p class="text-body color-h2">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="list color-h3">
+              <h3 class="text-style-small">Punctuality</h3>
+              <p class="text-body color-h2">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="list color-h3">
+              <h3 class="text-style-small">Diligence</h3>
+              <p class="text-body color-h2">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="list color-h3">
+              <h3 class="text-style-small">Technologies</h3>
+              <p class="text-body color-h2">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!-- що ми робимо -->
       <section class="sect-all">
-        <h2 class="text-style-m">What are we doing</h2>
+        <div class="container">
+          <h2 class="text-style-m">What are we doing</h2>
 
-        <ul class="list">
-          <li>
-            <img class="img" src="./images/fotoa.jpg" alt="nout" width="360" />
-          </li>
-          <li>
-            <img class="img" src="./images/fotob.jpg" alt="phone" width="360" />
-          </li>
-          <li>
-            <img
-              class="img"
-              src="./images/fotoc.jpg"
-              alt="noutphone"
-              width="360"
-            />
-          </li>
-        </ul>
+          <ul class="list doing">
+            <li>
+              <img
+                class="img"
+                src="./images/fotoa.jpg"
+                alt="nout"
+                width="360"
+              />
+            </li>
+            <li>
+              <img
+                class="img"
+                src="./images/fotob.jpg"
+                alt="phone"
+                width="360"
+              />
+            </li>
+            <li>
+              <img
+                class="img"
+                src="./images/fotoc.jpg"
+                alt="noutphone"
+                width="360"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!--наша команда  -->
       <section class="light-bg">
-        <h2 class="text-style-mm">Our Team</h2>
-        <ul class="list color-our-team">
-          <!-- фото4 -->
-          <li class="img-t">
-            <img src="./images/fotom.jpg" alt="mark" width="264" />
-            <h3 class="text-style-s">Mark Guerrero</h3>
-            <p class="text-body color-b">Product Designer</p>
-          </li>
+        <div class="container">
+          <h2 class="text-style-mm">Our Team</h2>
+          <ul class="list color-our-team">
+            <!-- фото4 -->
+            <li class="img-t">
+              <img src="./images/fotom.jpg" alt="mark" width="264" />
+              <h3 class="text-style-s">Mark Guerrero</h3>
+              <p class="text-body color-b">Product Designer</p>
+            </li>
 
-          <!-- фото5  -->
-          <li class="img-t">
-            <img src="./images/fotot.jpg" alt="tom" width="264" />
-            <h3 class="text-style-s">Tom Ford</h3>
-            <p class="text-body color-b">Frontend Developer</p>
-          </li>
+            <!-- фото5  -->
+            <li class="img-t">
+              <img src="./images/fotot.jpg" alt="tom" width="264" />
+              <h3 class="text-style-s">Tom Ford</h3>
+              <p class="text-body color-b">Frontend Developer</p>
+            </li>
 
-          <!-- фото6 -->
-          <li class="img-t">
-            <img src="./images/fotog.jpg" alt="camila" width="264" />
-            <h3 class="text-style-s">Camila Garcia</h3>
-            <p class="text-body color-b">Marketing</p>
-          </li>
+            <!-- фото6 -->
+            <li class="img-t">
+              <img src="./images/fotog.jpg" alt="camila" width="264" />
+              <h3 class="text-style-s">Camila Garcia</h3>
+              <p class="text-body color-b">Marketing</p>
+            </li>
 
-          <!-- фото7 -->
-          <li class="img-t">
-            <img src="./images/fotod.jpg" alt="daniel" width="264" />
-            <h3 class="text-style-s">Daniel Wilson</h3>
-            <p class="text-body color-b">UI Designer</p>
-          </li>
-        </ul>
+            <!-- фото7 -->
+            <li class="img-t">
+              <img src="./images/fotod.jpg" alt="daniel" width="264" />
+              <h3 class="text-style-s">Daniel Wilson</h3>
+              <p class="text-body color-b">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <!-- Page footer -->
     <footer class="footer link">
-      <a class="header-logo-link link" href="./index.html"
-        >Web <span class="studio link">Studio</span></a
-      >
-      <p class="text-body color-f">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container">
+        <a class="header-logo-link link" href="./index.html"
+          >Web <span class="studio link">Studio</span></a
+        >
+        <p class="text-body color-f">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
