--- a/portfolio.html
+++ b/portfolio.html
@@ -12,164 +12,179 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body class="body">
     <!-- Шапка сторінки -->
-    <header>
+    <header class="header">
       <!-- навігація на інші сторніки -->
+      <div class="container">
+        <nav class="body-medium link">
+          <a class="header-logo-link link" href="./index.html"
+            >Web <span class="studio-logo">Studio</span></a
+          >
+          <ul class="list">
+            <li>
+              <a href="./index.html" class="body-medium link color-a">Studio</a>
+            </li>
+            <li>
+              <a href="./portfolio.html" class="body-medium link color-a"
+                >Portfolio</a
+              >
+            </li>
+            <li>
+              <a href="" class="body-medium link color-a">Contacts</a>
+            </li>
+          </ul>
+        </nav>
 
-      <nav class="body-medium link">
-        <a class="header-logo-link link" href="./index.html"
-          >Web <span class="studio-logo">Studio</span></a
-        >
-        <ul class="list">
-          <li>
-            <a href="./index.html" class="body-medium link color-a">Studio</a>
-          </li>
-          <li>
-            <a href="./portfolio.html" class="body-medium link color-a"
-              >Portfolio</a
-            >
-          </li>
-          <li>
-            <a href="" class="body-medium link color-a">Contacts</a>
-          </li>
-        </ul>
-      </nav>
-
-      <address class="adress">
-        <ul class="adress list">
-          <li class="link">
-            <a class="text-body color-b link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li class="link">
-            <a class="text-body color-b link" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+        <address class="adress">
+          <ul class="adress list">
+            <li class="link">
+              <a class="text-body color-b link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="link">
+              <a class="text-body color-b link" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
     <main>
       <section class="text-style-big">
-        <h1 hidden>_</h1>
-        <ul class="list">
-          <li>
-            <button type="button" class="button-text button-all">All</button>
-          </li>
-          <li>
-            <button type="button" class="button-text button-all">
-              Web Site
-            </button>
-          </li>
-          <li>
-            <button type="button" class="button-text button-all">App</button>
-          </li>
-          <li>
-            <button type="button" class="button-text button-all">Design</button>
-          </li>
-          <li>
-            <button type="button" class="button-text button-all">
-              Marketing
-            </button>
-          </li>
-        </ul>
+        <div class="container">
+          <h1 hidden>_</h1>
+          <ul class="list">
+            <li>
+              <button type="button" class="button-text button-all">All</button>
+            </li>
+            <li>
+              <button type="button" class="button-text button-all">
+                Web Site
+              </button>
+            </li>
+            <li>
+              <button type="button" class="button-text button-all">App</button>
+            </li>
+            <li>
+              <button type="button" class="button-text button-all">
+                Design
+              </button>
+            </li>
+            <li>
+              <button type="button" class="button-text button-all">
+                Marketing
+              </button>
+            </li>
+          </ul>
+        </div>
+        <div class="container">
+          <ul class="list">
+            <!-- фото1 -->
+            <li class="link">
+              <a href="" class="link"
+                ><img src="./images/z.jpg" alt="app" width="300" />
+                <h2 class="text-port">Banking App Interface Concept</h2>
+                <p class="text-p">App</p></a
+              >
+            </li>
 
-        <ul class="list">
-          <!-- фото1 -->
-          <li class="link">
-            <a href="" class="link"
-              ><img src="./images/z.jpg" alt="app" width="300" />
-              <h2 class="text-port">Banking App Interface Concept</h2>
-              <p class="text-p">App</p></a
-            >
-          </li>
+            <!-- фото2  -->
+            <li class="link">
+              <a href="" class="link">
+                <img src="./images/w.jpg" alt="Marketing" width="300" />
+                <h2 class="text-port">Cashless Payment</h2>
+                <p class="text-p">Marketing</p></a
+              >
+            </li>
 
-          <!-- фото2  -->
-          <li class="link">
-            <a href="" class="link">
-              <img src="./images/w.jpg" alt="Marketing" width="300" />
-              <h2 class="text-port">Cashless Payment</h2>
-              <p class="text-p">Marketing</p></a
-            >
-          </li>
+            <!-- фото3 -->
+            <li class="link">
+              <a href="" class="link">
+                <img src="./images/y.jpg" alt="App" width="300" />
+                <h2 class="text-port">Meditation App</h2>
+                <p class="text-p">App</p></a
+              >
+            </li>
 
-          <!-- фото3 -->
-          <li class="link">
-            <a href="" class="link">
-              <img src="./images/y.jpg" alt="App" width="300" />
-              <h2 class="text-port">Meditation App</h2>
-              <p class="text-p">App</p></a
-            >
-          </li>
+            <!-- фото4 -->
+            <li class="link">
+              <a href="" class="link">
+                <img src="./images/q.jpg" alt="Marketing" width="300" />
+                <h2 class="text-port">Taxi Service</h2>
+                <p class="text-p">Marketing</p></a
+              >
+            </li>
 
-          <!-- фото4 -->
-          <li class="link">
-            <a href="" class="link">
-              <img src="./images/q.jpg" alt="Marketing" width="300" />
-              <h2 class="text-port">Taxi Service</h2>
-              <p class="text-p">Marketing</p></a
-            >
-          </li>
+            <!-- фото5 -->
+            <li class="link">
+              <a href="" class="link"
+                ><img src="./images/t.jpg" alt="Design" width="300" />
+                <h2 class="text-port">Screen Illustrations</h2>
+                <p class="text-p">Design</p></a
+              >
+            </li>
 
-          <!-- фото5 -->
-          <li class="link">
-            <a href="" class="link"
-              ><img src="./images/t.jpg" alt="Design" width="300" />
-              <h2 class="text-port">Screen Illustrations</h2>
-              <p class="text-p">Design</p></a
-            >
-          </li>
+            <!-- фото6 -->
+            <li class="link">
+              <a href="" class="link">
+                <img src="./images/x.jpg" alt="Marketing" width="300" />
+                <h2 class="text-port">Online Courses</h2>
+                <p class="text-p">Marketing</p></a
+              >
+            </li>
 
-          <!-- фото6 -->
-          <li class="link">
-            <a href="" class="link">
-              <img src="./images/x.jpg" alt="Marketing" width="300" />
-              <h2 class="text-port">Online Courses</h2>
-              <p class="text-p">Marketing</p></a
-            >
-          </li>
+            <!-- фото7 -->
+            <li class="link">
+              <a href="" class="link">
+                <img src="./images/m.jpg" alt="Design" width="300" />
+                <h2 class="text-port">Instagram Stories Concept</h2>
+                <p class="text-p">Design</p></a
+              >
+            </li>
 
-          <!-- фото7 -->
-          <li class="link">
-            <a href="" class="link">
-              <img src="./images/m.jpg" alt="Design" width="300" />
-              <h2 class="text-port">Instagram Stories Concept</h2>
-              <p class="text-p">Design</p></a
-            >
-          </li>
+            <!-- фото8 -->
+            <li class="link">
+              <a href="" class="link">
+                <img src="./images/l.jpg" alt="Web Site" width="300" />
+                <h2 class="text-port">Organic Food</h2>
+                <p class="text-p">Web Site</p></a
+              >
+            </li>
 
-          <!-- фото8 -->
-          <li class="link">
-            <a href="" class="link">
-              <img src="./images/l.jpg" alt="Web Site" width="300" />
-              <h2 class="text-port">Organic Food</h2>
-              <p class="text-p">Web Site</p></a
-            >
-          </li>
-
-          <!-- фото9 -->
-          <li class="link">
-            <a href="" class="link">
-              <img src="./images/s.jpg" alt="Web Site" width="300" />
-              <h2 class="text-port">Fresh Coffee</h2>
-              <p class="text-p">Web Site</p></a
-            >
-          </li>
-        </ul>
+            <!-- фото9 -->
+            <li class="link">
+              <a href="" class="link">
+                <img src="./images/s.jpg" alt="Web Site" width="300" />
+                <h2 class="text-port">Fresh Coffee</h2>
+                <p class="text-p">Web Site</p></a
+              >
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="footer link">
-      <a class="header-logo-link link" href="./index.html"
-        >Web <span class="studio link">Studio</span></a
-      >
-      <p class="text-body color-f">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container">
+        <a class="header-logo-link link" href="./index.html"
+          >Web <span class="studio link">Studio</span></a
+        >
+        <p class="text-body color-f">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
