--- a/index.html
+++ b/index.html
@@ -32,15 +32,17 @@
             >Web <span class="studio-logo link">Studio</span></a
           >
           <ul class="header-nav-list list">
-            <li class="link">
+            <li class="link header-nav-list">
               <a href="./index.html" class="header-nav-list body-medium link"
                 >Studio</a
               >
             </li>
-            <li>
+            <li class="link header-nav-list">
               <a href="./portfolio.html" class="body-medium link">Portfolio</a>
             </li>
-            <li><a href="" class="body-medium link">Contacts</a></li>
+            <li class="link header-nav-list">
+              <a href="" class="body-medium link">Contacts</a>
+            </li>
           </ul>
         </nav>
         <address class="adress">
@@ -76,7 +78,7 @@
       <section class="sect-all">
         <div class="container">
           <h2 class="text-style-medium" hidden>ab</h2>
-          <ul class="list section-2">
+          <ul class="section-2">
             <li class="list color-h3">
               <h3 class="text-style-small">Strategy</h3>
               <p class="text-body color-h2">
@@ -114,7 +116,7 @@
         <div class="container">
           <h2 class="text-style-m">What are we doing</h2>
 
-          <ul class="list doing">
+          <ul class="doing">
             <li>
               <img
                 class="img"
@@ -151,29 +153,37 @@
             <!-- фото4 -->
             <li class="img-t">
               <img src="./images/fotom.jpg" alt="mark" width="264" />
-              <h3 class="text-style-s">Mark Guerrero</h3>
-              <p class="text-body color-b">Product Designer</p>
+              <div class="team">
+                <h3 class="text-style-s">Mark Guerrero</h3>
+                <p class="text-body color-tt">Product Designer</p>
+              </div>
             </li>
 
             <!-- фото5  -->
             <li class="img-t">
               <img src="./images/fotot.jpg" alt="tom" width="264" />
-              <h3 class="text-style-s">Tom Ford</h3>
-              <p class="text-body color-b">Frontend Developer</p>
+              <div class="team">
+                <h3 class="text-style-s">Tom Ford</h3>
+                <p class="text-body color-tt">Frontend Developer</p>
+              </div>
             </li>
 
             <!-- фото6 -->
             <li class="img-t">
               <img src="./images/fotog.jpg" alt="camila" width="264" />
-              <h3 class="text-style-s">Camila Garcia</h3>
-              <p class="text-body color-b">Marketing</p>
+              <div class="team">
+                <h3 class="text-style-s">Camila Garcia</h3>
+                <p class="text-body color-tt">Marketing</p>
+              </div>
             </li>
 
             <!-- фото7 -->
             <li class="img-t">
               <img src="./images/fotod.jpg" alt="daniel" width="264" />
-              <h3 class="text-style-s">Daniel Wilson</h3>
-              <p class="text-body color-b">UI Designer</p>
+              <div class="team">
+                <h3 class="text-style-s">Daniel Wilson</h3>
+                <p class="text-body color-tt">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
