--- a/portfolio.html
+++ b/portfolio.html
@@ -62,10 +62,10 @@
       </div>
     </header>
     <main>
-      <section class="text-style-big">
+      <section class="text-style-bigp">
         <div class="container">
           <h1 hidden>_</h1>
-          <ul class="list">
+          <ul class="list list-portfolio">
             <li>
               <button type="button" class="button-text button-all">All</button>
             </li>
@@ -90,85 +90,138 @@
           </ul>
         </div>
         <div class="container">
-          <ul class="list">
+          <ul class="list-port-img">
             <!-- фото1 -->
-            <li class="link">
-              <a href="" class="link"
-                ><img src="./images/z.jpg" alt="app" width="300" />
-                <h2 class="text-port">Banking App Interface Concept</h2>
-                <p class="text-p">App</p></a
-              >
+            <li class="link-port">
+              <a href="" class="link">
+                <img class="img" src="./images/z.jpg" alt="app" width="300" />
+                <div class="div-port">
+                  <h2 class="text-port">Banking App Interface Concept</h2>
+                  <p class="text-p">App</p>
+                </div>
+              </a>
             </li>
 
             <!-- фото2  -->
-            <li class="link">
+            <li class="link-port">
               <a href="" class="link">
-                <img src="./images/w.jpg" alt="Marketing" width="300" />
-                <h2 class="text-port">Cashless Payment</h2>
-                <p class="text-p">Marketing</p></a
-              >
+                <img
+                  class="img"
+                  src="./images/w.jpg"
+                  alt="Marketing"
+                  width="300"
+                />
+                <div class="div-port">
+                  <h2 class="text-port">Cashless Payment</h2>
+                  <p class="text-p">Marketing</p>
+                </div>
+              </a>
             </li>
 
             <!-- фото3 -->
-            <li class="link">
+            <li class="link-port">
               <a href="" class="link">
-                <img src="./images/y.jpg" alt="App" width="300" />
-                <h2 class="text-port">Meditation App</h2>
-                <p class="text-p">App</p></a
-              >
+                <img class="img" src="./images/y.jpg" alt="App" width="300" />
+                <div class="div-port">
+                  <h2 class="text-port">Meditation App</h2>
+                  <p class="text-p">App</p>
+                </div>
+              </a>
             </li>
 
             <!-- фото4 -->
-            <li class="link">
+            <li class="link-port">
               <a href="" class="link">
-                <img src="./images/q.jpg" alt="Marketing" width="300" />
-                <h2 class="text-port">Taxi Service</h2>
-                <p class="text-p">Marketing</p></a
-              >
+                <img
+                  class="img"
+                  src="./images/q.jpg"
+                  alt="Marketing"
+                  width="300"
+                />
+                <div class="div-port">
+                  <h2 class="text-port">Taxi Service</h2>
+                  <p class="text-p">Marketing</p>
+                </div>
+              </a>
             </li>
 
             <!-- фото5 -->
-            <li class="link">
-              <a href="" class="link"
-                ><img src="./images/t.jpg" alt="Design" width="300" />
-                <h2 class="text-port">Screen Illustrations</h2>
-                <p class="text-p">Design</p></a
+            <li class="link-port">
+              <a href="" class="link">
+                <img
+                  class="img"
+                  src="./images/t.jpg"
+                  alt="Design"
+                  width="300"
+                />
+                <div class="div-port">
+                  <h2 class="text-port">Screen Illustrations</h2>
+                  <p class="text-p">Design</p>
+                </div></a
               >
             </li>
 
             <!-- фото6 -->
-            <li class="link">
+            <li class="link-port">
               <a href="" class="link">
-                <img src="./images/x.jpg" alt="Marketing" width="300" />
-                <h2 class="text-port">Online Courses</h2>
-                <p class="text-p">Marketing</p></a
+                <img
+                  class="img"
+                  src="./images/x.jpg"
+                  alt="Marketing"
+                  width="300"
+                />
+                <div class="div-port">
+                  <h2 class="text-port">Online Courses</h2>
+                  <p class="text-p">Marketing</p>
+                </div></a
               >
             </li>
 
             <!-- фото7 -->
-            <li class="link">
+            <li class="link-port">
               <a href="" class="link">
-                <img src="./images/m.jpg" alt="Design" width="300" />
-                <h2 class="text-port">Instagram Stories Concept</h2>
-                <p class="text-p">Design</p></a
+                <img
+                  class="img"
+                  src="./images/m.jpg"
+                  alt="Design"
+                  width="300"
+                />
+                <div class="div-port">
+                  <h2 class="text-port">Instagram Stories Concept</h2>
+                  <p class="text-p">Design</p>
+                </div></a
               >
             </li>
 
             <!-- фото8 -->
-            <li class="link">
+            <li class="link-port">
               <a href="" class="link">
-                <img src="./images/l.jpg" alt="Web Site" width="300" />
-                <h2 class="text-port">Organic Food</h2>
-                <p class="text-p">Web Site</p></a
+                <img
+                  class="img"
+                  src="./images/l.jpg"
+                  alt="Web Site"
+                  width="300"
+                />
+                <div class="div-port">
+                  <h2 class="text-port">Organic Food</h2>
+                  <p class="text-p">Web Site</p>
+                </div></a
               >
             </li>
 
             <!-- фото9 -->
-            <li class="link">
+            <li class="link-port">
               <a href="" class="link">
-                <img src="./images/s.jpg" alt="Web Site" width="300" />
-                <h2 class="text-port">Fresh Coffee</h2>
-                <p class="text-p">Web Site</p></a
+                <img
+                  class="img"
+                  src="./images/s.jpg"
+                  alt="Web Site"
+                  width="300"
+                />
+                <div class="div-port">
+                  <h2 class="text-port">Fresh Coffee</h2>
+                  <p class="text-p">Web Site</p>
+                </div></a
               >
             </li>
           </ul>
