--- a/portfolio.html
+++ b/portfolio.html
@@ -26,7 +26,7 @@
     <header class="header">
       <!-- навігація на інші сторніки -->
       <div class="container">
-        <nav class="body-medium link">
+        <nav class="body-medium link header-portf">
           <a class="header-logo-link link" href="./index.html"
             >Web <span class="studio-logo">Studio</span></a
           >
