--- a/index.html
+++ b/index.html
@@ -78,29 +78,29 @@
       <section class="sect-all">
         <div class="container">
           <h2 class="text-style-medium" hidden>ab</h2>
-          <ul class="section-2">
-            <li class="list color-h3">
+          <ul class="section-studio-all">
+            <li class="color-h3">
               <h3 class="text-style-small">Strategy</h3>
               <p class="text-body color-h2">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
             </li>
-            <li class="list color-h3">
+            <li class="color-h3">
               <h3 class="text-style-small">Punctuality</h3>
               <p class="text-body color-h2">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
-            <li class="list color-h3">
+            <li class="color-h3">
               <h3 class="text-style-small">Diligence</h3>
               <p class="text-body color-h2">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
-            <li class="list color-h3">
+            <li class="color-h3">
               <h3 class="text-style-small">Technologies</h3>
               <p class="text-body color-h2">
                 Design practice focused on digital experiences. We bring forth a
@@ -117,7 +117,7 @@
           <h2 class="text-style-m">What are we doing</h2>
 
           <ul class="doing">
-            <li>
+            <li class="img-doing">
               <img
                 class="img"
                 src="./images/fotoa.jpg"
@@ -125,7 +125,7 @@
                 width="360"
               />
             </li>
-            <li>
+            <li class="img-doing">
               <img
                 class="img"
                 src="./images/fotob.jpg"
@@ -133,7 +133,7 @@
                 width="360"
               />
             </li>
-            <li>
+            <li class="img-doing">
               <img
                 class="img"
                 src="./images/fotoc.jpg"
@@ -192,7 +192,7 @@
     <!-- Page footer -->
     <footer class="footer link">
       <div class="container">
-        <a class="header-logo-link link" href="./index.html"
+        <a class="header-logo-l" href="./index.html"
           >Web <span class="studio link">Studio</span></a
         >
         <p class="text-body color-f">
