--- a/portfolio.html
+++ b/portfolio.html
@@ -30,7 +30,7 @@
           <a class="header-logo-link link" href="./index.html"
             >Web <span class="studio-logo">Studio</span></a
           >
-          <ul class="list">
+          <ul class="list-adress">
             <li>
               <a href="./index.html" class="body-medium link color-a">Studio</a>
             </li>
@@ -46,7 +46,7 @@
         </nav>
 
         <address class="adress">
-          <ul class="adress list">
+          <ul class="adress list-adress">
             <li class="link">
               <a class="text-body color-b link" href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
