--- a/portfolio.html
+++ b/portfolio.html
@@ -26,11 +26,11 @@
     <header class="header">
       <!-- навігація на інші сторніки -->
       <div class="container">
-        <nav class="body-medium link header-portf">
+        <nav class="body-medium link header-portf header-nav">
           <a class="header-logo-link link" href="./index.html"
             >Web <span class="studio-logo">Studio</span></a
           >
-          <ul class="list-adress">
+          <ul class="list-adress header-nav-list">
             <li>
               <a href="./index.html" class="body-medium link color-a">Studio</a>
             </li>
@@ -46,7 +46,7 @@
         </nav>
 
         <address class="adress">
-          <ul class="adress list-adress">
+          <ul class="adress list-adress header-nav-list">
             <li class="link">
               <a class="text-body color-b link" href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
@@ -62,7 +62,7 @@
       </div>
     </header>
     <main>
-      <section class="text-style-bigp">
+      <section class="text-style-bigg">
         <div class="container">
           <h1 hidden>_</h1>
           <ul class="list list-portfolio">
