--- a/portfolio.html
+++ b/portfolio.html
@@ -25,7 +25,7 @@
     <!-- Шапка сторінки -->
     <header class="header">
       <!-- навігація на інші сторніки -->
-      <div class="container-port">
+      <div class="container">
         <nav class="body-medium link header-portf header-nav">
           <a class="header-logo-link link" href="./index.html"
             >Web <span class="studio-logo">Studio</span></a
