--- a/portfolio.html
+++ b/portfolio.html
@@ -63,7 +63,7 @@
     </header>
     <main>
       <section class="text-style-bigg">
-        <div class="container">
+        <div class="container portfolio">
           <h1 hidden>_</h1>
           <ul class="list list-portfolio">
             <li>
