--- a/portfolio.html
+++ b/portfolio.html
@@ -25,7 +25,7 @@
     <!-- Шапка сторінки -->
     <header class="header">
       <!-- навігація на інші сторніки -->
-      <div class="container">
+      <div class="container" style="display: flex">
         <nav class="body-medium link header-portf header-nav">
           <a class="header-logo-link link" href="./index.html"
             >Web <span class="studio-logo">Studio</span></a
@@ -63,7 +63,7 @@
     </header>
     <main>
       <section class="text-style-bigg">
-        <div class="container portfolio">
+        <div class="container">
           <h1 hidden>_</h1>
           <ul class="list list-portfolio">
             <li>
