--- a/index.html
+++ b/index.html
@@ -79,28 +79,28 @@
         <div class="container">
           <h2 class="text-style-medium" hidden>ab</h2>
           <ul class="section-studio-all">
-            <li class="sect-2">
+            <li class="sect">
               <h3 class="text-style-small">Strategy</h3>
               <p class="text-body color-h2">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
             </li>
-            <li class="sect-2">
+            <li class="sect">
               <h3 class="text-style-small">Punctuality</h3>
               <p class="text-body color-h2">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
-            <li class="sect-2">
+            <li class="sect">
               <h3 class="text-style-small">Diligence</h3>
               <p class="text-body color-h2">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
-            <li class="sect-2">
+            <li class="sect">
               <h3 class="text-style-small">Technologies</h3>
               <p class="text-body color-h2">
                 Design practice focused on digital experiences. We bring forth a
