--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
       </section>
 
       <!-- що ми робимо -->
-      <section class="sect-all">
+      <section class="sect-al">
         <div class="container">
           <h2 class="text-style-m">What are we doing</h2>
 
