--- a/index.html
+++ b/index.html
@@ -27,15 +27,13 @@
       <div class="header-container container">
         <!-- навігація на інші сторніки -->
 
-        <nav class="body-medium link medium-color header-nav">
+        <nav class="link medium-color header-nav">
           <a class="header-logo-link link" href="./index.html"
             >Web <span class="studio-logo link">Studio</span></a
           >
           <ul class="header-nav-list list">
-            <li class="link header-nav-list">
-              <a href="./index.html" class="header-nav-list body-medium link"
-                >Studio</a
-              >
+            <li class="link">
+              <a href="./index.html" class="body-medium link">Studio</a>
             </li>
             <li class="link header-nav-list">
               <a href="./portfolio.html" class="body-medium link">Portfolio</a>
