--- a/portfolio.html
+++ b/portfolio.html
@@ -25,28 +25,25 @@
     <!-- Шапка сторінки -->
     <header class="header">
       <!-- навігація на інші сторніки -->
-      <div class="container" style="display: flex">
-        <nav class="body-medium link header-portf header-nav">
+      <div class="header-container container" style="display: flex">
+        <nav class="link medium-color header-nav">
           <a class="header-logo-link link" href="./index.html"
-            >Web <span class="studio-logo">Studio</span></a
+            >Web <span class="studio-logo link">Studio</span></a
           >
-          <ul class="list-adress header-nav-list">
-            <li>
-              <a href="./index.html" class="body-medium link color-a">Studio</a>
+          <ul class="header-nav-list list">
+            <li class="link">
+              <a href="./index.html" class="body-medium link">Studio</a>
             </li>
-            <li>
-              <a href="./portfolio.html" class="body-medium link color-a"
-                >Portfolio</a
-              >
+            <li class="link header-nav-list">
+              <a href="./portfolio.html" class="body-medium link">Portfolio</a>
             </li>
-            <li>
-              <a href="" class="body-medium link color-a">Contacts</a>
+            <li class="link header-nav-list">
+              <a href="" class="body-medium link">Contacts</a>
             </li>
           </ul>
         </nav>
-
         <address class="adress">
-          <ul class="adress list-adress header-nav-list">
+          <ul class="list adress header-nav-list">
             <li class="link">
               <a class="text-body color-b link" href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
