--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
           <a class="header-logo-link link" href="./index.html"
             >Web <span class="studio-logo link">Studio</span></a
           >
-          <ul class="header-nav-list list">
-            <li class="link">
+          <ul class="link header-nav-list">
+            <li class="link list">
               <a href="./index.html" class="body-medium link">Studio</a>
             </li>
-            <li class="link header-nav-list">
+            <li class="link list">
               <a href="./portfolio.html" class="body-medium link">Portfolio</a>
             </li>
-            <li class="link header-nav-list">
+            <li class="link list">
               <a href="" class="body-medium link">Contacts</a>
             </li>
           </ul>
